COZMO-15428 CodeLab fixes display of long featured project descriptions #6366
Shrinks font when featured project descriptions get too long so that the words do not get obscured by the graphics.

--- a/unity/Cozmo/Assets/StreamingAssets/Scratch/extra/projects.css
+++ b/unity/Cozmo/Assets/StreamingAssets/Scratch/extra/projects.css
@@ -279,6 +279,9 @@ button:focus {
   font-family: 'Avenir Next';
   color: #353535;
 }
+.project-featured .project-description.long-title {
+  font-size: .8em;
+}
 
 
 #projects .ft {
